# mgcudalib

./: .gitignore  CMakeLists.txt  README.md
include/mgcublas/: mgcublas.cuh
include/mgcucommon/: mgcucommon.cuh
include/mgcuutils/: mgcuutils.cuh  mgcuutils_impl.cuh
src/: CMakeLists.txt  MGCudaLib.cu
test/: CMakeLists.txt  test_spmv.cpp  test_spmv.cu
